[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multiscale-toolbox"
version = "0.3.0"
description = "Reusable multiscale toolbox extended with WavePsi and DWT denoising utilities for Task 2."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "scipy",
  "pandas",
  "matplotlib",
  "pillow",
  "nibabel",
  "PyWavelets",
  "scikit-image",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
