[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multiscale-toolbox"
version = "0.5.0"
description = "Reusable multiscale toolbox with MRI, WavePsi, DWT denoising, Task 3 Starlet/MMT/SMV utilities, and Task 4 deconvolution with multiresolution regularization."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "scipy",
  "pandas",
  "matplotlib",
  "pillow",
  "nibabel",
  "PyWavelets",
  "scikit-image",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
